--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "token-analyzer",
+  "name": "cmc-token-api",
   "version": "1.0.0",
+  "description": "Token data from CoinMarketCap",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2"
   }
 }
